Fix main-menu and slider arrows z-index.

--- a/app/assets/stylesheets/application/components/main-slider.css.scss
+++ b/app/assets/stylesheets/application/components/main-slider.css.scss
@@ -11,7 +11,7 @@ $slider-button-offset: -50%;
   margin-top: -$slider-offset-top;
   overflow: hidden;
   position: relative;
-
+  z-index: 0;
 
 
 
